--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ img {
 .image-container {
 	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
 	margin-top: 32px;
 	margin-bottom: 32px;
